# Trace-Semiring-4D

./: .gitignore  Agents.md  Cargo.dev.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  SPEC_MAP.md  gpt.txt  rust-toolchain.toml
.cargo/: config.toml
benches/: basic.rs  criterion.rs
consumer-fixture/: Cargo.toml
consumer-fixture/src/: lib.rs  main.rs
consumer-fixture/tests/: smoke.rs
docs/: 4d_sections_clean.txt  57647_zen4_sog.txt  FORMULAS.md  README.md  RS_DOC.md  TUTORIAL.md  USAGE.md  zen4_registers.md
scripts/: harness_apply.ps1  harness_read.ps1
src/: algorithms.rs  cpu.rs  divisibility.rs  docs.rs  invariants.rs  lib.rs  modular.rs  physical.rs  prelude.rs  projections.rs  simd.rs  tests.rs  theory.rs  trace.rs  ts4.rs  types.rs
tools/: bench_policy.ps1  build_release.ps1  check.ps1  ci.ps1  compare_basic_results.ps1  gen_rustdoc.ps1  gen_rustdoc.ps1.run  run_topology_waves.ps1  sync_docs.ps1  verify_codegen.ps1
